--- a/swift-movie-app-mvvm/Presentation/Screens/Base.lproj/Main.storyboard
+++ b/swift-movie-app-mvvm/Presentation/Screens/Base.lproj/Main.storyboard
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="21507" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="L5G-kh-LoO">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="21507" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="lUw-6A-bAo">
     <device id="retina6_7" orientation="portrait" appearance="light"/>
     <dependencies>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="21505"/>
@@ -151,12 +151,82 @@
                     <navigationItem key="navigationItem" title="Home" id="k78-Sl-qqD"/>
                     <connections>
                         <outlet property="tableView" destination="mug-rT-uhf" id="pGF-XS-ZP5"/>
-                        <segue destination="Q7Q-QK-gfT" kind="show" identifier="DetailsViewController" id="BQj-0s-MrR"/>
+                        <segue destination="Q7Q-QK-gfT" kind="show" id="CKY-nu-niS"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="1031.7757009345794" y="-27.213822894168469"/>
+            <point key="canvasLocation" x="1931.7757009345794" y="-27.213822894168469"/>
+        </scene>
+        <!--Favorites-->
+        <scene sceneID="YyO-eK-9Nt">
+            <objects>
+                <viewController id="Xj3-9x-xFe" customClass="FavoritesViewController" customModule="swift_movie_app_mvvm" customModuleProvider="target" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="51w-B0-2C7">
+                        <rect key="frame" x="0.0" y="0.0" width="428" height="926"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <collectionView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" showsHorizontalScrollIndicator="NO" dataMode="prototypes" translatesAutoresizingMaskIntoConstraints="NO" id="Frv-xb-Qev">
+                                <rect key="frame" x="0.0" y="0.0" width="428" height="926"/>
+                                <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                                <collectionViewFlowLayout key="collectionViewLayout" minimumLineSpacing="10" minimumInteritemSpacing="10" id="JaP-eX-pIg">
+                                    <size key="itemSize" width="201" height="232"/>
+                                    <size key="headerReferenceSize" width="0.0" height="0.0"/>
+                                    <size key="footerReferenceSize" width="0.0" height="0.0"/>
+                                    <inset key="sectionInset" minX="0.0" minY="0.0" maxX="0.0" maxY="0.0"/>
+                                </collectionViewFlowLayout>
+                                <cells>
+                                    <collectionViewCell opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" reuseIdentifier="FavoriteCell" id="8dy-ug-pZE" customClass="FavoriteCollectionViewCell" customModule="swift_movie_app_mvvm" customModuleProvider="target">
+                                        <rect key="frame" x="0.0" y="0.0" width="201" height="232"/>
+                                        <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                        <collectionViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" insetsLayoutMarginsFromSafeArea="NO" id="1sR-t1-0Ma">
+                                            <rect key="frame" x="0.0" y="0.0" width="201" height="232"/>
+                                            <autoresizingMask key="autoresizingMask"/>
+                                            <subviews>
+                                                <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="eAC-TH-Oe8">
+                                                    <rect key="frame" x="0.0" y="0.0" width="201" height="232"/>
+                                                </imageView>
+                                            </subviews>
+                                            <constraints>
+                                                <constraint firstAttribute="trailing" secondItem="eAC-TH-Oe8" secondAttribute="trailing" id="4BE-sY-qRU"/>
+                                                <constraint firstItem="eAC-TH-Oe8" firstAttribute="leading" secondItem="1sR-t1-0Ma" secondAttribute="leading" id="BJk-fU-tTN"/>
+                                                <constraint firstAttribute="bottom" secondItem="eAC-TH-Oe8" secondAttribute="bottom" id="C7y-Io-Hdi"/>
+                                                <constraint firstItem="eAC-TH-Oe8" firstAttribute="top" secondItem="1sR-t1-0Ma" secondAttribute="top" id="ibu-bV-vtR"/>
+                                            </constraints>
+                                        </collectionViewCellContentView>
+                                        <size key="customSize" width="201" height="232"/>
+                                        <connections>
+                                            <outlet property="imageView" destination="eAC-TH-Oe8" id="aiZ-Kt-dRy"/>
+                                        </connections>
+                                    </collectionViewCell>
+                                </cells>
+                            </collectionView>
+                        </subviews>
+                        <viewLayoutGuide key="safeArea" id="LNw-yA-xAc"/>
+                        <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                        <constraints>
+                            <constraint firstItem="Frv-xb-Qev" firstAttribute="leading" secondItem="LNw-yA-xAc" secondAttribute="leading" id="3bP-nV-Bak"/>
+                            <constraint firstItem="Frv-xb-Qev" firstAttribute="top" secondItem="51w-B0-2C7" secondAttribute="top" id="Q65-KG-jIb"/>
+                            <constraint firstAttribute="bottom" secondItem="Frv-xb-Qev" secondAttribute="bottom" id="hhq-y3-ZMU"/>
+                            <constraint firstItem="Frv-xb-Qev" firstAttribute="trailing" secondItem="LNw-yA-xAc" secondAttribute="trailing" id="l8M-hY-KWA"/>
+                        </constraints>
+                    </view>
+                    <navigationItem key="navigationItem" title="Favorites" id="kJq-HL-lHR">
+                        <barButtonItem key="rightBarButtonItem" title="Clear" id="dzQ-sa-ZfV">
+                            <connections>
+                                <action selector="onClearTap:" destination="Xj3-9x-xFe" id="IZR-qb-FMm"/>
+                            </connections>
+                        </barButtonItem>
+                    </navigationItem>
+                    <connections>
+                        <outlet property="clearButton" destination="dzQ-sa-ZfV" id="4tM-r8-7OT"/>
+                        <outlet property="collectionView" destination="Frv-xb-Qev" id="hMv-9i-63i"/>
+                        <segue destination="Q7Q-QK-gfT" kind="show" id="5Z6-ln-KNS"/>
+                    </connections>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="QQd-lQ-3sj" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="1256.0747663551401" y="747.73218142548603"/>
         </scene>
         <!--Details View Controller-->
         <scene sceneID="nPD-dO-lQ2">
@@ -170,7 +240,7 @@
                                 <rect key="frame" x="0.0" y="91" width="428" height="835"/>
                                 <subviews>
                                     <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" translatesAutoresizingMaskIntoConstraints="NO" id="g4P-bj-1wp">
-                                        <rect key="frame" x="0.0" y="0.0" width="428" height="529"/>
+                                        <rect key="frame" x="0.0" y="0.0" width="428" height="544"/>
                                         <subviews>
                                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="l4o-Uk-HyY">
                                                 <rect key="frame" x="0.0" y="0.0" width="428" height="200"/>
@@ -189,10 +259,10 @@
                                                 </constraints>
                                             </view>
                                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="i1a-gc-5rX">
-                                                <rect key="frame" x="0.0" y="200" width="428" height="50"/>
+                                                <rect key="frame" x="0.0" y="200" width="428" height="65"/>
                                                 <subviews>
-                                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Title" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="agM-TZ-x0D">
-                                                        <rect key="frame" x="30" y="8.3333333333333144" width="368" height="33.666666666666664"/>
+                                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Title" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="2" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="agM-TZ-x0D">
+                                                        <rect key="frame" x="30" y="15.666666666666682" width="368" height="33.666666666666657"/>
                                                         <fontDescription key="fontDescription" type="system" pointSize="28"/>
                                                         <nil key="textColor"/>
                                                         <nil key="highlightedColor"/>
@@ -202,12 +272,12 @@
                                                 <constraints>
                                                     <constraint firstItem="agM-TZ-x0D" firstAttribute="leading" secondItem="i1a-gc-5rX" secondAttribute="leading" constant="30" id="0eN-lD-yhP"/>
                                                     <constraint firstItem="agM-TZ-x0D" firstAttribute="centerY" secondItem="i1a-gc-5rX" secondAttribute="centerY" id="3Cp-1k-9f9"/>
-                                                    <constraint firstAttribute="height" constant="50" id="7uh-xe-3p2"/>
+                                                    <constraint firstAttribute="height" constant="65" id="7uh-xe-3p2"/>
                                                     <constraint firstAttribute="trailing" secondItem="agM-TZ-x0D" secondAttribute="trailing" constant="30" id="WLI-Ob-84b"/>
                                                 </constraints>
                                             </view>
                                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="hIn-2Y-Tt6">
-                                                <rect key="frame" x="0.0" y="250" width="428" height="50"/>
+                                                <rect key="frame" x="0.0" y="265" width="428" height="50"/>
                                                 <subviews>
                                                     <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="star.fill" catalog="system" translatesAutoresizingMaskIntoConstraints="NO" id="NNX-KT-LdS">
                                                         <rect key="frame" x="30" y="14.666666666666666" width="22" height="20"/>
@@ -254,7 +324,7 @@
                                                 </constraints>
                                             </view>
                                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="8Ga-LX-9BU">
-                                                <rect key="frame" x="0.0" y="300" width="428" height="229"/>
+                                                <rect key="frame" x="0.0" y="315" width="428" height="229"/>
                                                 <subviews>
                                                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Description" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="4ji-Gl-jgS">
                                                         <rect key="frame" x="20" y="30" width="388" height="179"/>
@@ -311,12 +381,13 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="b4N-Tz-Ci6" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="1989.252336448598" y="-27.213822894168469"/>
+            <point key="canvasLocation" x="2215" y="748"/>
         </scene>
-        <!--Navigation Controller-->
+        <!--Home-->
         <scene sceneID="KPf-x0-ZV0">
             <objects>
                 <navigationController automaticallyAdjustsScrollViewInsets="NO" id="L5G-kh-LoO" sceneMemberID="viewController">
+                    <tabBarItem key="tabBarItem" title="Home" image="house" catalog="system" id="cXI-fe-pg5"/>
                     <toolbarItems/>
                     <navigationBar key="navigationBar" contentMode="scaleToFill" id="pd2-7Z-yYn">
                         <rect key="frame" x="0.0" y="47" width="428" height="44"/>
@@ -329,11 +400,54 @@
                 </navigationController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="Oiv-ce-fSJ" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
+            <point key="canvasLocation" x="1031.7757009345794" y="-27.213822894168469"/>
+        </scene>
+        <!--Tab Bar Controller-->
+        <scene sceneID="3J3-kC-0iv">
+            <objects>
+                <tabBarController storyboardIdentifier="TabBarController" automaticallyAdjustsScrollViewInsets="NO" id="lUw-6A-bAo" sceneMemberID="viewController">
+                    <toolbarItems/>
+                    <tabBar key="tabBar" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" id="u5y-UY-9V8">
+                        <rect key="frame" x="0.0" y="0.0" width="1000" height="1000"/>
+                        <autoresizingMask key="autoresizingMask"/>
+                        <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                    </tabBar>
+                    <connections>
+                        <segue destination="L5G-kh-LoO" kind="relationship" relationship="viewControllers" id="wQd-Wn-PlT"/>
+                        <segue destination="RRi-Eh-lu2" kind="relationship" relationship="viewControllers" id="fiz-dD-dGA"/>
+                    </connections>
+                </tabBarController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="hUw-SU-m3u" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
+            </objects>
             <point key="canvasLocation" x="131.77570093457942" y="-27.213822894168469"/>
         </scene>
+        <!--Favorites-->
+        <scene sceneID="hWB-ro-EgE">
+            <objects>
+                <navigationController automaticallyAdjustsScrollViewInsets="NO" id="RRi-Eh-lu2" sceneMemberID="viewController">
+                    <tabBarItem key="tabBarItem" title="Favorites" image="heart.fill" catalog="system" id="zFV-2p-KTI"/>
+                    <toolbarItems/>
+                    <navigationBar key="navigationBar" contentMode="scaleToFill" id="333-kj-osz">
+                        <rect key="frame" x="0.0" y="47" width="428" height="44"/>
+                        <autoresizingMask key="autoresizingMask"/>
+                    </navigationBar>
+                    <nil name="viewControllers"/>
+                    <connections>
+                        <segue destination="Xj3-9x-xFe" kind="relationship" relationship="rootViewController" id="Fu4-NT-a4h"/>
+                    </connections>
+                </navigationController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="cfh-aT-TDx" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="356.07476635514018" y="747.73218142548603"/>
+        </scene>
     </scenes>
+    <inferredMetricsTieBreakers>
+        <segue reference="CKY-nu-niS"/>
+    </inferredMetricsTieBreakers>
     <resources>
         <image name="heart" catalog="system" width="128" height="107"/>
+        <image name="heart.fill" catalog="system" width="128" height="107"/>
+        <image name="house" catalog="system" width="128" height="104"/>
         <image name="star.fill" catalog="system" width="128" height="116"/>
         <systemColor name="systemBackgroundColor">
             <color white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
